#414: Added object and queries for Item Image Types